fix: prevent station name from overflowing

--- a/client/src/app/components/station/station.component.scss
+++ b/client/src/app/components/station/station.component.scss
@@ -24,6 +24,12 @@
     padding: 0.5rem 0;
 
     h2 {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      line-clamp: 3;
+      overflow: hidden;
+
       font-size: 1.2rem;
       font-weight: 600;
     }
